# ableton-organizer

./: .gitignore  README.md  install_dependencies.py  install_system_deps.sh  pyproject.toml  quick_test.sh  workflow.py
configs/: migration_config.sh
scripts/: migrate_to_nas.sh  migration_dashboard.py  nas_structure_creator.py  project_classifier.py  project_scanner.py  reorganize_bash.py  reorganize_projects.py
