[project]
name = "ableton-organizer"
version = "0.1.0"
description = "Complete automation suite for organizing Ableton projects with production-first priority"
requires-python = ">=3.10"
dependencies = [
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
